# musicware

./: .gitignore  package-lock.json  package.json  vitest.config.ts
.claude/agents/: moonozy-arrangement-engineer.md  moonozy-beginner-guide.md  moonozy-composition-analyst.md  moonozy-mixing-advisor.md  moonozy-music-director.md  moonozy-song-architect.md  moonozy-transition-designer.md
.github/workflows/: ci.yml
.moonozy/principles/: 00-index.md  evaluation.md
.moonozy/templates/: adr.md  business-case.md  c4.md  poc.md  prd.md  state.example.json  tech-spec.md
docs/: CONTEXT.md  RELEASING.md
prototypes/spike-2-polyphony-budget/: Cargo.toml  results.md
prototypes/spike-2-polyphony-budget/src/: main.rs
scripts/: bump-version.mjs  set-app-name.mjs
src/: App.css  App.test.tsx  App.tsx  ChordDisplay.test.tsx  ChordDisplay.tsx  ClipShelf.test.tsx  ClipShelf.tsx  Keyboard.tsx  Library.tsx  ModeToggle.test.tsx  ModeToggle.tsx  Playhead.test.tsx  Playhead.tsx  PresetSelector.test.tsx  PresetSelector.tsx  Recorder.test.tsx  Recorder.tsx  SectionBand.test.tsx  SectionBand.tsx  SongBar.test.tsx  SongBar.tsx  SongTransport.test.tsx  SongTransport.tsx  SongView.test.tsx  SongView.tsx  StorageBanner.test.tsx  StorageBanner.tsx  Timeline.test.tsx  Timeline.tsx  TrackHeader.test.tsx  TrackHeader.tsx  Transport.tsx  VideoView.tsx  Visualizer.tsx  VizStyleSelector.test.tsx  VizStyleSelector.tsx  VoiceView.test.tsx  VoiceView.tsx  VolumeControl.test.tsx  VolumeControl.tsx  (+44 more)
src-tauri/: Cargo.toml  Info.dev.plist  Info.plist  tauri.conf.json
src-tauri/src/: audio.rs  lib.rs  (+1 more)
(+47 files in other folders)
